feat: integrate OpenAPI generated API interface und implementation